# subjective-uncertainty

./: .gitignore  models.py  pyproject.toml  utils.py
BioCertainty/: FirstTrial.ipynb  LICENSE  setup.cfg  setup.py
BioCertainty/data/: model.json  training_set.csv
certainty-estimator/certainty_estimator/: predict_certainty.py
run/: check_labeled.py  convert_5scale_to_3scale.py  dev_modal_reduction.py  extract_modifiers.py  test.py
subj_unc/: dep_tree.py  models.py  utils.py
