[tool.poetry]
name = "subjective-uncertainty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "subjective_uncertainty"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.1"
nltk = "^3.7"
requests = "^2.27.1"
transformers = "^4.17.0"
torch = "^1.10.2"
keras = "^2.8.0"
tensorflow = "^2.8.0"
black = "^22.1.0"
certainty-estimator = {git = "https://github.com/Jiaxin-Pei/certainty-estimator.git"}
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
spacy = "^3.4.1"
networkx = "^2.8.7"
pygraphviz = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
